fix: language selector on mobile + hero banner mobile styles

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -54,7 +54,7 @@ a.link:hover::after {
   }
 
   .hero.home {
-    background-size: cover;
-    background-position: center -55%;
+    background-size: 350%;
+    background-position: center top;
   }
 }
